--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -265,7 +265,9 @@ img {
 }
 
 .button:hover {
+  background-color: rgb(205, 131, 234);
   box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
+  color: black;
 }
 
 /* ===== ABOUT =====*/
